--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,9 @@
 <!--index.wxml-->
 <!-- 轮播图 -->
 <view class='slider'>
-    <swiper indicator-dots="true" autoplay="{{ true }}" interval="2500" duration="400" circular>
+    <swiper indicator-dots="true" autoplay="{{ true }}" interval="2500" duration="400" circular >
         <swiper-item wx:for='{{ sliderList }}' wx:key='id'>
-            <image src="{{ item.image }}" width="375" height="150"  mode="aspectFill" />
+            <image src="{{ item.image }}"   mode="aspectFill" />
         </swiper-item>
         
     </swiper>
@@ -19,11 +19,11 @@
    
 </view>
 <!-- 首页分区入口 -->
-<view class="index-enter bgw mt20">
-    <navigator class='enter-item'>
+<view class="index-enter bgw mt20"  >
+    <navigator class='enter-item' url="../shopList/shopList?cat=1&title='美食'">
        <image src='/assets/images/link-01.png'></image>
     </navigator>
-    <navigator class='enter-item'>
+    <navigator class='enter-item' url="../message/message">
         <image src='/assets/images/link-02.png'></image>
     </navigator>
 </view>
